Resolviendo cambios de compatibilidad y accesibilidad de los elementos de html, como los links sin texto adentro si no con iconos, con botones sin texto, se le pusieron un title y se agrego compatibilidad de CSS al transform

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <header>
       <nav class="nav">
         <ul class="nav__links" id="navbar">
-          <img src="images/logo.png" alt="Logo" class="nav__logo" />
+          <li>
+            <img src="images/logo.png" alt="Logo" class="nav__logo" />
+          </li>
           <li class="nav__links-link">
             <a href="index.html" class="active">Inicio</a>
           </li>
@@ -98,7 +100,11 @@
             <span>3</span>
           </a>
           <a href="pages/login.html" class="link__login">Inicia sesión</a>
-          <button class="button-hamburger" id="button-hamburger">
+          <button
+            class="button-hamburger"
+            id="button-hamburger"
+            title="Button nav hmaburger"
+          >
             <i class="bx bx-menu" id="icon-hamburger"></i>
           </button>
         </div>
@@ -108,7 +114,7 @@
       <div class="contenedor-general">
         <!-- SECTION CAROUSEL -->
         <section class="contenedor-carousel scroll-reveal">
-          <button id="prevBtn">
+          <button id="prevBtn" title="button prev carousel">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -186,7 +192,7 @@
               </div>
             </div>
           </div>
-          <button id="nextBtn">
+          <button id="nextBtn" title="button next carousel">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -321,7 +327,7 @@
                       <p>4.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -409,7 +415,7 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -497,7 +503,7 @@
                       <p>4.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -583,7 +589,7 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -672,7 +678,7 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -759,7 +765,7 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -872,7 +878,7 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -958,7 +964,7 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1044,7 +1050,7 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1128,7 +1134,7 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1215,7 +1221,7 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart">
+                      <button class="button__card cart" title="button-cart">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1350,7 +1356,7 @@
         <div class="footer__col-2 scroll-reveal">
           <div class="footer__social scroll-reveal">
             <div class="footer__social-redes scroll-reveal">
-              <a href="#" class="scroll-reveal">
+              <a href="#" class="scroll-reveal" title="link-facebook">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -1373,7 +1379,7 @@
                   />
                 </svg>
               </a>
-              <a href="#" class="scroll-reveal">
+              <a href="#" class="scroll-reveal" title="link-instagram">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -1401,7 +1407,7 @@
                   />
                 </svg>
               </a>
-              <a href="#" class="scroll-reveal">
+              <a href="#" class="scroll-reveal" title="link-x">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -1418,7 +1424,7 @@
                   />
                 </svg>
               </a>
-              <a href="#" class="scroll-reveal">
+              <a href="#" class="scroll-reveal" title="link-youtube">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
