--- a/pages/login.html
+++ b/pages/login.html
@@ -124,13 +124,13 @@
             </div>
           </form>
           <div class="login__social">
-            <a href="#" class="login__social-facebook">
+            <a href="#" class="login__social-facebook" title="link-facebook">
               <i class="bx bxl-facebook"></i>
             </a>
-            <a href="#" class="login__social-twitter">
+            <a href="#" class="login__social-twitter" title="link-x">
               <i class="bx bxl-twitter"></i>
             </a>
-            <a href="#" class="login__social-google">
+            <a href="#" class="login__social-google" title="link-google">
               <i class="bx bxl-google"></i>
             </a>
           </div>
