--- a/index.html
+++ b/index.html
@@ -65,39 +65,24 @@
             >
               <path
                 d="M8 16H15.2632C19.7508 16 20.4333 13.1808 21.261 9.06908C21.4998 7.88311 21.6192 7.29013 21.3321 6.89507C21.045 6.5 20.4947 6.5 19.3941 6.5H6"
-                stroke="currentColor"
                 stroke-width="1.5"
                 stroke-linecap="round"
               />
               <path
                 d="M8 16L5.37873 3.51493C5.15615 2.62459 4.35618 2 3.43845 2H2.5"
-                stroke="currentColor"
                 stroke-width="1.5"
                 stroke-linecap="round"
               />
               <path
                 d="M8.88 16H8.46857C7.10522 16 6 17.1513 6 18.5714C6 18.8081 6.1842 19 6.41143 19H17.5"
-                stroke="currentColor"
                 stroke-width="1.5"
                 stroke-linecap="round"
                 stroke-linejoin="round"
               />
-              <circle
-                cx="10.5"
-                cy="20.5"
-                r="1.5"
-                stroke="currentColor"
-                stroke-width="1.5"
-              />
-              <circle
-                cx="17.5"
-                cy="20.5"
-                r="1.5"
-                stroke="currentColor"
-                stroke-width="1.5"
-              />
+              <circle cx="10.5" cy="20.5" r="1.5" stroke-width="1.5" />
+              <circle cx="17.5" cy="20.5" r="1.5" stroke-width="1.5" />
             </svg>
-            <span>3</span>
+            <span id="total-productos">3</span>
           </a>
           <a href="pages/login.html" class="link__login">Inicia sesión</a>
           <button
@@ -140,15 +125,7 @@
             </svg>
           </button>
           <div class="carousel-container">
-            <div
-              class="carousel-slide active"
-              style="
-                background-image: url('images/carousel/image1.webp');
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-              "
-            >
+            <div class="carousel-slide active slide-1">
               <div class="carousel-slide__content slider-1">
                 <h3>Los mejores conjuntos de accesorios y vestimenta</h3>
                 <p>
@@ -158,15 +135,7 @@
                 <a href="#">Ver más</a>
               </div>
             </div>
-            <div
-              class="carousel-slide"
-              style="
-                background-image: url('images/carousel/image2.webp');
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-              "
-            >
+            <div class="carousel-slide slide-2">
               <div class="carousel-slide__content slider-2">
                 <h3>Ofertas todos los días en ropa para hombres y mujeres</h3>
                 <p>
@@ -176,15 +145,7 @@
                 <a href="#">Ver ofertas</a>
               </div>
             </div>
-            <div
-              class="carousel-slide"
-              style="
-                background-image: url('images/carousel/image3.webp');
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-              "
-            >
+            <div class="carousel-slide slide-3">
               <div class="carousel-slide__content slider-3">
                 <h3>Conjuntos completos para parejas</h3>
                 <p>Encuentra los mejores conjuntos completos para parejas.</p>
