Pagina de cart.html completada

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -99,7 +99,9 @@
           </div>
           <div class="cart-table">
             <div class="cart-table__col producto"><h3>Producto</h3></div>
-            <div class="cart-table__col cantidad"><h3>Cantidad</h3></div>
+            <div class="cart-table__col cantidad">
+              <h3>Cantidad</h3>
+            </div>
             <div class="cart-table__col precio">
               <h3 class="precio-pu">Precio unitario</h3>
               <h3 class="precio-p-u">P/U</h3>
