--- a/index.html
+++ b/index.html
@@ -60,27 +60,42 @@
               viewBox="0 0 24 24"
               width="24"
               height="24"
-              color="#fff"
+              color="#000000"
               fill="none"
             >
               <path
                 d="M8 16H15.2632C19.7508 16 20.4333 13.1808 21.261 9.06908C21.4998 7.88311 21.6192 7.29013 21.3321 6.89507C21.045 6.5 20.4947 6.5 19.3941 6.5H6"
+                stroke="currentColor"
                 stroke-width="1.5"
                 stroke-linecap="round"
               />
               <path
                 d="M8 16L5.37873 3.51493C5.15615 2.62459 4.35618 2 3.43845 2H2.5"
+                stroke="currentColor"
                 stroke-width="1.5"
                 stroke-linecap="round"
               />
               <path
                 d="M8.88 16H8.46857C7.10522 16 6 17.1513 6 18.5714C6 18.8081 6.1842 19 6.41143 19H17.5"
+                stroke="currentColor"
                 stroke-width="1.5"
                 stroke-linecap="round"
                 stroke-linejoin="round"
               />
-              <circle cx="10.5" cy="20.5" r="1.5" stroke-width="1.5" />
-              <circle cx="17.5" cy="20.5" r="1.5" stroke-width="1.5" />
+              <circle
+                cx="10.5"
+                cy="20.5"
+                r="1.5"
+                stroke="currentColor"
+                stroke-width="1.5"
+              />
+              <circle
+                cx="17.5"
+                cy="20.5"
+                r="1.5"
+                stroke="currentColor"
+                stroke-width="1.5"
+              />
             </svg>
             <span id="total-productos">3</span>
           </a>
@@ -338,7 +353,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -426,7 +443,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -514,7 +533,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="#" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -600,7 +621,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -689,7 +712,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -776,7 +801,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -889,7 +916,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -975,7 +1004,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -1061,7 +1092,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="#" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -1145,7 +1178,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -1232,7 +1267,9 @@
                           />
                         </svg>
                       </button>
-                      <a href="" class="button__card">Detalles</a>
+                      <a href="pages/product-single.html" class="button__card"
+                        >Detalles</a
+                      >
                     </div>
                   </div>
                 </div>
