Se agrego el archivo register.html y se modificaron los archivos styles.css y login.html

--- a/pages/login.html
+++ b/pages/login.html
@@ -120,7 +120,7 @@
             </div>
             <div class="login-register">
               <span class="login__text">¿No tienes una cuenta?</span>
-              <a href="register.php" class="login__link">Regístrate</a>
+              <a href="register.html" class="login__link">Regístrate</a>
             </div>
           </form>
           <div class="login__social">
