--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 stroke-width="1.5"
               />
             </svg>
-            <span>3</span>
+            <span id="total-productos"></span>
           </a>
           <a href="pages/login.html" class="link__login">
             <p>Inicia sesión</p>
@@ -406,7 +406,10 @@
                       <p>4.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -576,7 +579,10 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -745,7 +751,10 @@
                       <p>4.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -912,7 +921,10 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1082,7 +1094,10 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1250,7 +1265,10 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1445,7 +1463,10 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1613,7 +1634,10 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1780,7 +1804,10 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -1946,7 +1973,10 @@
                       <p>5.0</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -2114,7 +2144,10 @@
                       <p>4.5</p>
                     </div>
                     <div class="card__footer-buttons">
-                      <button class="button__card cart" title="button-cart">
+                      <button
+                        class="button__card cart button-add-cart"
+                        title="button-cart"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           viewBox="0 0 24 24"
@@ -2368,5 +2401,6 @@
     <script src="js/carousel.js"></script>
     <script src="js/select.js"></script>
     <script src="js/scrollreveal.js"></script>
+    <script src="js/cart.js"></script>
   </body>
 </html>
