Se agrego el id al carrito para poder mostrar el total de los productos actualmente en el carrito

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -94,7 +94,7 @@
                 stroke-width="1.5"
               />
             </svg>
-            <span>3</span>
+            <span class="total-productos"></span>
           </a>
           <a href="login.html" class="link__login">
             <p>Inicia sesión</p>
@@ -373,7 +373,7 @@
                 <div class="resumen-pago__content">
                   <div class="resumen-pago__item">
                     <p>Total productos:</p>
-                    <p class="total-productos">3</p>
+                    <p class="total-productos"></p>
                   </div>
                   <div class="resumen-pago__item">
                     <p>Descuento:</p>
@@ -381,7 +381,7 @@
                   </div>
                   <div class="resumen-pago__total">
                     <p>Total a pagar:</p>
-                    <p class="total-pagar">$75.00</p>
+                    <p class="total-pagar" id="total-pagar"></p>
                   </div>
                 </div>
               </div>
@@ -917,7 +917,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/scrollreveal.js"></script>
-    <script src="../js/cart.js"></script>
     <script src="../js/select.js"></script>
     <script src="../js/tab.js"></script>
     <script src="../js/metodo-pago-buttons.js"></script>
