Se modifico el estilo de los precios de los cards de las ofertas

--- a/index.html
+++ b/index.html
@@ -1372,7 +1372,7 @@
                       Camisa casual para hombre, ideal para cualquier ocasión.
                     </p>
                     <p class="card__body-price">
-                      <span class="card__body-price-offer">$20.00</span>
+                      <span class="card__body-price">$20.00</span>
                     </p>
                   </div>
                   <div class="card__footer">
@@ -1543,7 +1543,7 @@
                       Sudadera negra oversize, con logo de 705.
                     </p>
                     <p class="card__body-price">
-                      <span class="card__body-price-offer">$15.00</span>
+                      <span class="card__body-price">$15.00</span>
                     </p>
                   </div>
                   <div class="card__footer">
@@ -1714,7 +1714,7 @@
                       Camisa negra, con logo de 705 Seven Zero Five
                     </p>
                     <p class="card__body-price">
-                      <span class="card__body-price-offer">$37.5</span>
+                      <span class="card__body-price">$37.5</span>
                     </p>
                   </div>
                   <div class="card__footer">
@@ -1882,7 +1882,7 @@
                     <h3 class="card__body-title">Vestido azul</h3>
                     <p class="card__body-text">Vestido azul.</p>
                     <p class="card__body-price">
-                      <span class="card__body-price-offer">$24.00</span>
+                      <span class="card__body-price">$24.00</span>
                     </p>
                   </div>
                   <div class="card__footer">
@@ -2054,7 +2054,7 @@
                       y falda blanca.
                     </p>
                     <p class="card__body-price">
-                      <span class="card__body-price-offer">$35.00</span>
+                      <span class="card__body-price">$35.00</span>
                     </p>
                   </div>
                   <div class="card__footer">
