Se agrego la funcionalidad de aplicar el descuento de los productos y mostrarlos en el carrito y el pago

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -167,12 +167,12 @@
                   stroke-width="1.5"
                 />
               </svg>
-              <p>Subtotal:</p>
+              <p id="subtotal-price"></p>
               <p class="total-price"></p>
             </div>
             <div class="cart__total-descuento">
               <p>Descuento:</p>
-              <p>$0.00</p>
+              <p id="total-descuento">$0.00</p>
             </div>
             <div class="cart__total-precio">
               <p>Total:</p>
