--- a/pages/payment.html
+++ b/pages/payment.html
@@ -381,7 +381,7 @@
                   </div>
                   <div class="resumen-pago__item">
                     <p>Descuento:</p>
-                    <p>$0.00</p>
+                    <p id="total-descuento">$0.00</p>
                   </div>
                   <div class="resumen-pago__total">
                     <p>Total a pagar:</p>
