Se agrego un contenedor de toast para mostrar los mensajes cuando se agrega un producto al carrito o se elimine por completo del carrito

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
       </nav>
     </header>
     <main class="main" id="main">
+      <div id="toast-container" class="hidden"></div>
       <div class="contenedor-general">
         <!-- SECTION CAROUSEL -->
         <section class="contenedor-carousel scroll-reveal">
@@ -1334,7 +1335,6 @@
           </div>
         </section>
         <!-- END SECTION OFERTAS -->
-
         <!-- SECTION POPULARES -->
         <section class="contenedor-populares scroll-reveal">
           <div class="contenedor-populares__title">
@@ -2406,5 +2406,6 @@
     <script src="assets/js/select.js"></script>
     <script src="assets/js/scrollreveal.js"></script>
     <script src="assets/js/cart.js"></script>
+    <script src="assets/js/toast.js"></script>
   </body>
 </html>
