--- a/pages/cart.html
+++ b/pages/cart.html
@@ -131,6 +131,7 @@
       </nav>
     </header>
     <main class="main" id="main">
+      <div id="toast-container" class="hidden"></div>
       <div class="contenedor-general">
         <div class="contenedor-cart scroll-reveal">
           <div class="cart__title scroll-reveal">
