Se actualizo los links de los archivos js y las images de la pagina product-single.html

--- a/pages/product-single.html
+++ b/pages/product-single.html
@@ -144,7 +144,7 @@
           <div class="product-single__images scroll-reveal">
             <div class="product-single__images-main">
               <img
-                src="../images/productos/conjuntocompleto.webp"
+                src="../assets/images/productos/conjuntocompleto.webp"
                 alt="Product"
                 class="product-single__images-main-img"
                 id="main-imagen"
@@ -153,34 +153,34 @@
             <div class="product-single__images-thumbs scroll-reveal">
               <div class="images-thumbs-col-1 scroll-reveal">
                 <img
-                  src="../images/productos/camisa1.webp"
+                  src="../assets/images/productos/camisa1.webp"
                   alt="Product"
                   class="product-single__images-thumbs-img"
                 />
                 <img
-                  src="../images/productos/camisa2.webp"
+                  src="../assets/images/productos/camisa2.webp"
                   alt="Product"
                   class="product-single__images-thumbs-img"
                 />
                 <img
-                  src="../images/productos/camisa3.webp"
+                  src="../assets/images/productos/camisa3.webp"
                   alt="Product"
                   class="product-single__images-thumbs-img"
                 />
               </div>
               <div class="images-thumbs-col-2">
                 <img
-                  src="../images/productos/chaqueta.webp"
+                  src="../assets/images/productos/chaqueta.webp"
                   alt="Product"
                   class="product-single__images-thumbs-img"
                 />
                 <img
-                  src="../images/productos/conjuntocompleto.webp"
+                  src="../assets/images/productos/conjuntocompleto.webp"
                   alt="Product"
                   class="product-single__images-thumbs-img"
                 />
                 <img
-                  src="../images/productos/vestido.webp"
+                  src="../assets/images/productos/vestido.webp"
                   alt="Product"
                   class="product-single__images-thumbs-img"
                 />
@@ -550,7 +550,7 @@
                     <img
                       decoding="async"
                       loading="lazy"
-                      src="../images/productos/camisa1.webp"
+                      src="../assets/images/productos/camisa1.webp"
                       alt="Camisa casual para hombre"
                     />
                   </div>
@@ -718,7 +718,7 @@
                     <img
                       decoding="async"
                       loading="lazy"
-                      src="../images/productos/camisa2.webp"
+                      src="../assets/images/productos/camisa2.webp"
                       alt="Sudadera negra"
                     />
                   </div>
@@ -886,7 +886,7 @@
                     <img
                       decoding="async"
                       loading="lazy"
-                      src="../images/productos/camisa3.webp"
+                      src="../assets/images/productos/camisa3.webp"
                       alt="Camisa negra"
                     />
                   </div>
@@ -1053,7 +1053,7 @@
                     <img
                       decoding="async"
                       loading="lazy"
-                      src="../images/productos/vestido.webp"
+                      src="../assets/images/productos/vestido.webp"
                       alt="Vestido azul"
                     />
                   </div>
@@ -1219,7 +1219,7 @@
                     <img
                       decoding="async"
                       loading="lazy"
-                      src="../images/productos/conjuntocompleto.webp"
+                      src="../assets/images/productos/conjuntocompleto.webp"
                       alt="Conjunto completo"
                     />
                   </div>
@@ -1598,14 +1598,14 @@
         </div>
       </div>
     </footer>
-    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../assets/js/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="../js/swiper.js"></script>
-    <script src="../js/script.js"></script>
-    <script src="../js/scrollreveal.js"></script>
-    <script src="../js/cart.js"></script>
-    <script src="../js/accordion.js"></script>
-    <script src="../js/modal.js"></script>
-    <script src="../js/buttons-options.js"></script>
+    <script src="../assets/js/swiper.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/scrollreveal.js"></script>
+    <script src="../assets/js/cart.js"></script>
+    <script src="../assets/js/accordion.js"></script>
+    <script src="../assets/js/modal.js"></script>
+    <script src="../assets/js/buttons-options.js"></script>
   </body>
 </html>
